# accounting

./: .gitignore  Cargo.toml  LICENSE  README.MD  Rocket.toml  bips39.html  build.zig  build.zig.zon  example.rawqrcode.binary.txt  mvsc-envs.ps1  qr.html  rust-toolchain.toml
.zig-cache/o/1ea1a8d8b8fb57adb44df59c87bf1629/: dependencies.zig
.zig-cache/o/4b65ce3cd2d3a84b171be1e7dbb9babb/: cimport.h.d
.zig-cache/o/6a1ec0d0b0452cf75da8470b283a493e/: cimport.zig
app/: Cargo.toml  Rocket.toml  build.rs
app/src/lib/: mod.rs
app/src/lib/server/: browserhash.rs  mod.rs
app/templates/: index.html.tera
app/tests/: integration_tests.rs
chrome_devtools_protocol_parser_and_builder/src/: main.rs
jtmb-reflect-db/src/: lib.rs
jtmb-reflect-db/src/drivers/: any.rs
jtmb-reflect-db/src/drivers/sqlite/: mod.rs
jtmb_db_drivers/jtmb-reflect-db/: Cargo.toml
jtmb_db_drivers/jtmb-reflect-db/src/: lib.rs
jtmb_db_drivers/jtmb-reflect-db/src/drivers/: any.rs  mod.rs
jtmb_db_drivers/jtmb-reflect-db/src/drivers/sqlite/: mod.rs
jtmb_db_drivers/jtmb_db_core/: Cargo.toml
jtmb_db_drivers/jtmb_db_core/src/: connection.rs  encode_decode.rs  execute.rs  fetch.rs  lib.rs  prepare.rs  query.rs  types.rs
jtmb_db_drivers/jtmb_db_core/src/drivers/: mod.rs  postgres.rs
jtmb_db_drivers/jtmb_db_core/src/drivers/sqlite/: mod.rs  types.rs  utils.rs  vtbl.rs  worker.rs
jtmb_db_drivers/jtmb_postgres/: Cargo.toml
jtmb_db_drivers/jtmb_postgres/src/: lib.rs  main.rs  wire.rs
jtmb_db_drivers/jtmb_sqlite/: Cargo.toml  build.rs  build.zig  build.zig.zon
jtmb_db_drivers/jtmb_sqlite/src/: lib.rs  root.zig
jtmb_db_drivers/jtmb_sqlite/src/alloc/: alloc.zig  mod.rs
jtmb_db_drivers/jtmb_sqlite/src/config/: mod.rs
jtmb_db_drivers/jtmb_sqlite/src/ffi/: bindgen.rs  mod.rs
sql/: Cargo.toml
sql/accounting_proc_macro/: Cargo.toml
sql/accounting_proc_macro/src/: lib.rs
sql/migrations/: Cargo.toml
sql/migrations/src/: lib.rs  main.rs  v1_initdb.rs
sql/migrations/src/reflect/: any.rs  mod.rs  sqlite.rs
sql/migrations/src/user_multitenant/: mod.rs  v1_initdb.rs
sql/src/: lib.rs
sql/src/user/: mod.rs
sqlite-zig/: Cargo.toml  build.rs  build.zig
sqlite-zig/src/: lib.rs  main.zig  root.zig
sqlite-zig/src/alloc/: alloc.zig  mod.rs
sqlite-zig/src/config/: config.zig  mod.rs
sqlite-zig/src/ffi/: mod.rs  v0.rs
vault/: Cargo.toml
vault/src/: main.rs
vault/src/lib/: bips.rs  config.rs  crypto.rs  graphics.rs  mod.rs  net.rs  print.rs  term.rs  tpm_2_0.rs
vault_ci/src/: main.rs
vault_service/src/: main.rs
vault_service/src/server/: mod.rs
vault_ui/src/: lib.rs
