

[workspace]
members = ["app","sqlite_zig","jtmb-reflect-db","sql","sql/accounting_proc_macro","sql/migrations","vault","vault_ui","vault_service",
"vault_ci","chrome_devtools_protocol",
"chrome_devtools_protocol_parser_and_builder"
]
resolver="3"
[workspace.dependencies]
#hot-lib-reloader = "0.8.2"
reqwest = "0.13.2"
rocket = "0.5.1"
sqlx={version="^0.8",path="../sqlx_0_8_6_port"}
