[package]
name="sqlite_zig"
version="0.1.0"
edition="2024"


[features]
#the very first protocol. you have to enable this to do anything
# if an underlying library changes or we decide toimplement our own protocol or database, this will allow the code to remain in place for archival purposes
protocol_v0=[]
default=["protocol_v0"]