[package]
name="jtmb_postgres"
version="0.1.0"
edition="2024"

[dependencies]
# we explicitly lock pq-sys because we make low level assumptions about
# the library innards do not update without verifying
pq-sys = { version = "=0.7.5", features = ["bundled"] }
tokio = { version = "1.50.0", features = ["full", "mio"] }
crossbeam = "0.8.4"
dashmap = "6.1.0"
mio = "1.1.1"

[target.'cfg(windows)'.dependencies]
# The "Compatibility" layer for Windows
windows = {version = "0.62.2", features = ["Win32_Networking_WinSock"]}
