[package]
name="jtmb_sqlite"
version="0.1.0"
edition="2024"


[features]
#the very first protocol. you have to enable this to do anything
# if an underlying library changes or we decide toimplement our own protocol or database, this will allow the code to remain in place for archival purposes
protocol_v0=[]
default=["protocol_v0"]

[build-dependencies]
cc = "1.2.57"

[dependencies]
affinity = "0.1.2"
crossbeam = "0.8.4"
num_cpus = "1.17.0"
tokio = { version = "1.50.0", features = ["full"] }
